[Enhancement] Name the external column-set statistics MCV statistics
The most common value tuples of a column set of an external table were
collected with ANALYZE ... MULTIPLE COLUMNS, the syntax of the native
combined-NDV statistics, and stored as multi-column statistics, although
they are a different statistic: an MCV list with exact counts over one
or more columns.

They get their own syntax and names: ANALYZE [FULL] TABLE t MCV (cols),
SHOW MCV STATS META and DROP MCV STATS, the statistics type MCV, the
table _statistics_.external_mcv_statistics, the dump section
external_mcv_statistics, the session variable cbo_enable_mcv_estimate
and the External*Mcv* classes. MULTIPLE COLUMNS keeps its native-table
meaning and is rejected on external tables.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Signed-off-by: Evgeniy Shishkin <eshishki@gmail.com>