@@ -16,7 +16,7 @@ package com.starrocks.sql.optimizer.statistics;
 
 import com.starrocks.persist.gson.GsonUtils;
 import com.starrocks.sql.ast.StatisticsType;
-import com.starrocks.statistic.ExternalMultiColumnStatsMeta;
+import com.starrocks.statistic.ExternalMcvStatsMeta;
 import com.starrocks.statistic.StatsConstants;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -26,13 +26,13 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-public class ExternalMultiColumnStatsCacheLoaderTest {
+public class ExternalMcvStatsCacheLoaderTest {
     @Test
     public void testParseGroup() {
         List<String> row = List.of("[\"status\",\"gate\"]", "1000", "12",
                 "[[[\"approved\",\"0\"],\"540\",[\"700\",\"900\"]],[[null,\"1\"],\"7\"],[[\"short\"],\"3\"],"
                         + "[[\"zero\",\"0\"],\"0\"],[[\"odd\",\"2\"],\"5\",[\"9\"]]]");
-        ExternalMultiColumnCombinedStatistics.Group group = ExternalMultiColumnStatsCacheLoader.parseGroup(row);
+        ExternalMcvStatistics.Group group = ExternalMcvStatsCacheLoader.parseGroup(row);
         Assertions.assertNotNull(group);
         Assertions.assertEquals(List.of("status", "gate"), group.getColumnNames());
         Assertions.assertEquals(1000, group.getRowCount());
@@ -52,25 +52,25 @@ public class ExternalMultiColumnStatsCacheLoaderTest {
 
     @Test
     public void testParseGroupToleratesMissingMcvAndRejectsBadRows() {
-        ExternalMultiColumnCombinedStatistics.Group group = ExternalMultiColumnStatsCacheLoader.parseGroup(
+        ExternalMcvStatistics.Group group = ExternalMcvStatsCacheLoader.parseGroup(
                 Arrays.asList("[\"a\",\"b\"]", "10", "3", null));
         Assertions.assertNotNull(group);
         Assertions.assertTrue(group.getMcv().isEmpty());
 
-        Assertions.assertNull(ExternalMultiColumnStatsCacheLoader.parseGroup(Arrays.asList(null, "10", "3", "[]")));
-        Assertions.assertNull(ExternalMultiColumnStatsCacheLoader.parseGroup(List.of("[\"a\"]", "10", "3", "[]")));
-        Assertions.assertNull(ExternalMultiColumnStatsCacheLoader.parseGroup(List.of("not json", "10", "3", "[]")));
+        Assertions.assertNull(ExternalMcvStatsCacheLoader.parseGroup(Arrays.asList(null, "10", "3", "[]")));
+        Assertions.assertNull(ExternalMcvStatsCacheLoader.parseGroup(List.of("[\"a\"]", "10", "3", "[]")));
+        Assertions.assertNull(ExternalMcvStatsCacheLoader.parseGroup(List.of("not json", "10", "3", "[]")));
     }
 
     @Test
     public void testMetaGsonRoundTrip() {
-        ExternalMultiColumnStatsMeta meta = new ExternalMultiColumnStatsMeta("hive0", "db", "t",
+        ExternalMcvStatsMeta meta = new ExternalMcvStatsMeta("hive0", "db", "t",
                 List.of("status", "gate"), StatsConstants.AnalyzeType.FULL,
                 List.of(StatisticsType.MCDISTINCT, StatisticsType.MCV),
                 LocalDateTime.of(2026, 9, 20, 12, 0, 0), Map.of("k", "v"));
         meta.setTableUUID("uuid-1");
         String json = GsonUtils.GSON.toJson(meta);
-        ExternalMultiColumnStatsMeta copy = GsonUtils.GSON.fromJson(json, ExternalMultiColumnStatsMeta.class);
+        ExternalMcvStatsMeta copy = GsonUtils.GSON.fromJson(json, ExternalMcvStatsMeta.class);
         Assertions.assertEquals("hive0", copy.getCatalogName());
         Assertions.assertEquals("db", copy.getDbName());
         Assertions.assertEquals("t", copy.getTableName());
